localdev/terraform/modules/vcs_files/mr3_files/apps/httpbin/base/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-internal
  annotations:
    kubernetes.io/ingress.class: myingressclass
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /helloworld/(.*)
            backend:
              service:
                name: helloworld-svc
                port:
                  name: http
            pathType: ImplementationSpecific
